<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/layout_margin_top"
    android:layout_marginLeft="@dimen/layout_margin_start"
    android:layout_marginStart="@dimen/layout_margin_start"
    android:layout_marginEnd="@dimen/layout_margin_end"
    android:layout_marginRight="@dimen/layout_margin_end"
    android:layout_marginBottom="@dimen/layout_margin_bottom"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameText"
        android:textSize="@dimen/text_size"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/name"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionText"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_below="@id/nameText"
        android:text="@string/description"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dateText"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_below="@id/descriptionText"
        android:text="@string/start_date"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/durationText"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_below="@id/dateText"
        android:text="@string/duration"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameEdit"
        android:inputType="text|textCapWords"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginLeft="@dimen/margin_start"
        android:layout_toRightOf="@+id/nameText"
        android:layout_toEndOf="@+id/nameText"
        android:layout_alignBaseline="@+id/nameText"
        android:ems="15"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionEdit"
        android:inputType="text|textCapSentences"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginLeft="@dimen/margin_start"
        android:layout_toRightOf="@+id/descriptionText"
        android:layout_toEndOf="@+id/descriptionText"
        android:layout_alignBaseline="@+id/descriptionText"
        android:ems="15"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dateEdit"
        android:inputType="date"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginLeft="@dimen/margin_start"
        android:layout_toRightOf="@+id/dateText"
        android:layout_toEndOf="@+id/dateText"
        android:layout_alignBaseline="@+id/dateText"
        android:ems="15"
        android:focusable="false"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/durationEdit"
        android:inputType="number"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginLeft="@dimen/margin_start"
        android:layout_toRightOf="@+id/durationText"
        android:layout_toEndOf="@+id/durationText"
        android:layout_alignBaseline="@+id/durationText"
        android:ems="15"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:id="@+id/insertButton"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/durationText"
        android:text="@string/insert_habit"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:id="@+id/refreshButton"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/insertButton"
        android:text="@string/refresh_data"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_below="@+id/refreshButton"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/habitsList"
            android:fontFamily="monospace"
            />

    </ScrollView>



</RelativeLayout>
